# nfc-tools

./: .gitignore  build.gradle  index.html  params.json
androidMfoc/: build.gradle  compiler-file.d  compiler-file1.d  compiler-file2.d  compiler-file393.d  compiler-file77.d  compiler-file927.d
androidMfoc/src/main/: AndroidManifest.xml
androidMfoc/src/main/cpp/: Android.mk  CMakeLists.txt  fake-libnfc.c  fake-stdio.c  mfoc.c
androidMfoc/src/main/cpp/include/: err.h  stdio.h
androidMfoc/src/main/cpp/include/nfc/: nfc-types.h
androidMfoc/src/main/cpp/src/: crapto1.h  mfoc.c  mfoc.h  mifare.c  mifare.h  nfc-utils.c  nfc-utils.h
androidMfoc/src/main/java/net/raisama/nfc/mfoc/: AndroidMfocActivity.java  NativeImplementation.java  NfcDevice.java  UiFakeFile.java
androidMfoc/src/main/jni/: Android.mk  fake-libnfc.c  fake-stdio.c
androidMfoc/src/main/res/layout/: main.xml
mfoc/android/AndroidMfoc/jni/: fake-libnfc.c  fake-stdio.c  mfoc-jni.h  mfoc.c
mfoc/android/AndroidMfoc/jni/include/: err.h
mfoc/android/AndroidMfoc/jni/include/nfc/: nfc-types.h
mfoc/src/: mfoc.c  mfoc.h  mifare.c  mifare.h  nfc-utils.c
